fix some styles and make it looks better on small screens

--- a/css/master.css
+++ b/css/master.css
@@ -138,6 +138,7 @@ html {
 }
 body {
   font-family: "Cairo", sans-serif;
+  overflow-x: hidden;
 }
 * {
   -webkit-box-sizing: border-box;
@@ -158,6 +159,7 @@ ul {
   margin-left: auto;
   margin-right: auto;
 }
+
 /* Small */
 @media (min-width: 768px) {
   .container {
@@ -192,6 +194,7 @@ header .container {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
 }
 header .logo {
   flex: 1;
@@ -208,12 +211,12 @@ header nav {
   display: flex;
   height: 100%;
   flex: 1;
+  width: 50%;
 }
 header nav ul {
   flex: 1;
   height: 100%;
   display: flex;
-  justify-content: space-between;
 }
 header nav ul li a {
   color: black;
@@ -228,6 +231,7 @@ header nav ul li {
   position: relative;
   cursor: pointer;
   width: 100%;
+  margin: 0 !important;
 }
 header nav ul li::before {
   content: "";
@@ -273,6 +277,7 @@ header nav .menu:hover .box {
   opacity: 1;
   top: 70px;
   z-index: 3;
+  width: 90%;
 }
 header .box {
   background-color: white;
@@ -312,10 +317,13 @@ header .mega-menu::after {
 }
 header .mega-menu .image {
   height: 100%;
-  flex-basis: 45%;
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 header .mega-menu .image img {
-  max-width: cover;
+  width: 100%;
 }
 header .mega-menu .buttons {
   display: flex;
@@ -330,7 +338,7 @@ header .mega-menu .buttons .group {
 }
 header .mega-menu .buttons .group ul {
   height: 100%;
-  padding: 20px;
+  padding: 20px 1px;
   display: flex;
   flex-direction: column;
   gap: 3px;
@@ -1013,7 +1021,7 @@ header .mega-menu .buttons .group ul li:hover::before {
   display: flex;
   flex-direction: column;
   height: 500px;
-  padding: 70px 0 0 0;
+  justify-content: center;
   position: relative;
 }
 .team-members .content .box::before {
@@ -1084,7 +1092,7 @@ header .mega-menu .buttons .group ul li:hover::before {
   color: var(--main-color);
 }
 .team-members .content img {
-  width: 100%;
+  width: 70%;
   border-radius: 20px;
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
@@ -1097,8 +1105,7 @@ header .mega-menu .buttons .group ul li:hover::before {
   flex-direction: column;
   width: calc(100% - 70px);
   margin-left: 70px;
-  padding: 15px;
-  flex: 1;
+  padding: 10px;
   justify-content: center;
   gap: 10px;
 }
@@ -1271,7 +1278,7 @@ header .mega-menu .buttons .group ul li:hover::before {
 .skills .content .data {
   display: flex;
   flex-direction: column;
-  flex-basis: 50%;
+  width: 100%;
 }
 .skills .content .data .prog {
   display: flex;
@@ -1459,6 +1466,17 @@ header .mega-menu .buttons .group ul li:hover::before {
   -ms-transform: translateY(-50%);
   -o-transform: translateY(-50%);
   z-index: -1;
+}
+@media (max-width: 667px) {
+  .events::before {
+    display: none;
+  }
+  .events::after {
+    display: none;
+  }
+  .events .content .calc .numbers .col {
+    width: 70px !important;
+  }
 }
 .events .content {
   display: flex;
@@ -1648,7 +1666,14 @@ header .mega-menu .buttons .group ul li:hover::before {
   -ms-transform: translateY(-50%);
   -o-transform: translateY(-50%);
 }
-
+@media (max-width: 767px) {
+  .pricing::before {
+    display: none;
+  }
+  .pricing::after {
+    display: none;
+  }
+}
 .pricing .plans {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
@@ -2101,12 +2126,23 @@ footer .logos .social {
 }
 footer .logos .social i {
   background-color: #333;
-  width: 50px;
-  height: 50px;
+  width: 60px;
+  height: 60px;
   display: flex;
   justify-content: center;
   align-items: center;
   color: white;
+  font-size: 22px;
+  cursor: pointer;
+}
+footer .logos .social i.facebook {
+  color: #4267b2;
+}
+footer .logos .social i.twitter {
+  color: #1da1f2;
+}
+footer .logos .social i.youtube {
+  color: #ff0000;
 }
 footer .logos p {
   color: #ccc;
@@ -2186,6 +2222,7 @@ footer .footer-gallery {
 footer .footer-gallery img {
   width: 30%;
   border: 3px solid white;
+  cursor: pointer;
 }
 footer .copyright {
   padding: 20px;
